src/index.css
@import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap');

@tailwind base;
@tailwind components;
@tailwind utilities;

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

@layer base {
  h1 {
    @apply text-4xl;
  }
  h2 {
    @apply text-3xl;
  }
  h3 {
    @apply text-2xl;
  }
  h4 {
    @apply text-lg;
  }
  h5 {
    @apply text-sm;
  }
  a {
    @apply text-white underline no-underline font-bold;
  }
}

html, body {
  scroll-behavior: smooth;
  font-family: 'Lato', monospace, sans-serif;
  color: #fff;
  background: #0a0f1c;
  overflow: hidden;
}

.react-tabs__tab {
  border: none !important;
  position: unset !important;
}

.react-tabs__tab.react-tabs__tab--selected {
  border-radius: 0px;
  animation-name: fadeIn;
  animation-duration: 300ms;
  animation-timing-function: linear;
}

@keyframes fadeIn {
  from { opacity: 0; } to { opacity: 1; }
}

.gradient {
  -webkit-animation: moving-gradient 3s linear infinite;
  -moz-animation: moving-gradient 3s linear infinite;
  -o-animation: moving-gradient 3s linear infinite;
  animation: moving-gradient 3s linear infinite;
}

@-webkit-keyframes moving-gradient {
  0%{background-position:83% 0%}
  50%{background-position:18% 100%}
  100%{background-position:83% 0%}
}
@-moz-keyframes moving-gradient {
  0%{background-position:83% 0%}
  50%{background-position:18% 100%}
  100%{background-position:83% 0%}
}
@-o-keyframes moving-gradient {
  0%{background-position:83% 0%}
  50%{background-position:18% 100%}
  100%{background-position:83% 0%}
}
@keyframes moving-gradient {
  0%{background-position:83% 0%}
  50%{background-position:18% 100%}
  100%{background-position:83% 0%}
}

.gradient.gradient-1 {
  background: linear-gradient(120deg, #000000, #e74c3c);
  background-size: 100% 300%;
}

.gradient.gradient-2 {
  background: linear-gradient(13deg, rgb(96 12 86 / 76%), rgb(255 168 37 / 75%));
  background-size: 100% 300%;
}

.gradient.gradient-3 {
  background: linear-gradient(120deg, #16222a, #3a6073);
  background-size: 100% 300%;
}

.gradient.gradient-4 {
  background: linear-gradient(13deg, #360033, #0b8793);
  background-size: 100% 300%;
}

.gradient.gradient-5 {
  background: linear-gradient(13deg, #780206, #061161);
  background-size: 100% 300%;
}

.gradient.gradient-6 {
  background: linear-gradient(13deg, #e7672b, #3634cd);
  background-size: 100% 300%;
}

.loader {
  width: 10px;
  height: 10px;
  border-radius: 50%;
  display: inline-block;
  margin:15px auto;
  position: relative;
  color: #FFF;
  left: -100px;
  box-sizing: border-box;
  animation: shadowRolling 2s linear infinite;
}

@keyframes shadowRolling {
  0% {
    box-shadow: 0px 0 rgba(255, 255, 255, 0), 0px 0 rgba(255, 255, 255, 0), 0px 0 rgba(255, 255, 255, 0), 0px 0 rgba(255, 255, 255, 0);
  }
  12% {
    box-shadow: 100px 0 white, 0px 0 rgba(255, 255, 255, 0), 0px 0 rgba(255, 255, 255, 0), 0px 0 rgba(255, 255, 255, 0);
  }
  25% {
    box-shadow: 110px 0 white, 100px 0 white, 0px 0 rgba(255, 255, 255, 0), 0px 0 rgba(255, 255, 255, 0);
  }
  36% {
    box-shadow: 120px 0 white, 110px 0 white, 100px 0 white, 0px 0 rgba(255, 255, 255, 0);
  }
  50% {
    box-shadow: 130px 0 white, 120px 0 white, 110px 0 white, 100px 0 white;
  }
  62% {
    box-shadow: 200px 0 rgba(255, 255, 255, 0), 130px 0 white, 120px 0 white, 110px 0 white;
  }
  75% {
    box-shadow: 200px 0 rgba(255, 255, 255, 0), 200px 0 rgba(255, 255, 255, 0), 130px 0 white, 120px 0 white;
  }
  87% {
    box-shadow: 200px 0 rgba(255, 255, 255, 0), 200px 0 rgba(255, 255, 255, 0), 200px 0 rgba(255, 255, 255, 0), 130px 0 white;
  }
  100% {
    box-shadow: 200px 0 rgba(255, 255, 255, 0), 200px 0 rgba(255, 255, 255, 0), 200px 0 rgba(255, 255, 255, 0), 200px 0 rgba(255, 255, 255, 0);
  }
}

